fixed inuit issue with double scroll

--- a/src/scss/grommet-core/_objects.app.scss
+++ b/src/scss/grommet-core/_objects.app.scss
@@ -15,7 +15,9 @@
     bottom: 0px;
     left: 0px;
     right: 0px;
-    overflow: auto;
+    height: 100%;
+    width: 100%;
+    overflow: visible;
   }
 
   &--inline {
